--- a/Milestone 1.Rmd
+++ b/Milestone 1.Rmd
@@ -1,6 +1,8 @@
 ---
 title: 'Milestone #1 Group 10'
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 date: "2024-09-26"
 ---
 
