--- a/Milestone 2.Rmd
+++ b/Milestone 2.Rmd
@@ -215,7 +215,7 @@ str(cdc_wonder_population_data)
 
 Identify the desired type/format for each variable—will you need to convert any columns to numeric or another type?
 
-The Medicaid Dataset has Senior Spending, Adult Spending, Total Spending, and Children Spending all as character values. It would be better to convert these to either a numeric or a double value which we have done using the janitor function. This is because it will be easy to manipulate and perform summary statistics with this data if it is in that format vs. being a character.
+The Medicaid Dataset has Senior Spending, Adult Spending, Total Spending, and Children Spending all as character values. It would be better to convert these to either a numeric or a double value. This is because it will be easy to manipulate and perform summary statistics with this data if it is in that format vs. being a character.
 
 To analyze correlations between Medicare/ Medicaid spending per state and population/mortality rates, we will ensure that the "Residence.State.Code" and "Deaths" columns are numeric, as they will be used in quantitative analysis. The "Ten.Year.Age.Groups.Code" might also need conversion if age group analysis is required. The "Residence.State" and "UCD...ICD.Sub.Chapter" columns should remain as character or factor types for categorical analysis.
 
